# WiFi-Microphone-Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  clock  clock.cpp  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/include/: imath.h
main/include/TCP/: TCP.h
main/include/microphone/: microphone.h
main/include/udp/: packet.h  udp.h
main/include/wifi/: wifi.h
main/src/: imath.cpp  main.cpp
main/src/TCP/: TCP.cpp
main/src/microphone/: microphone.cpp
main/src/udp/: udp.cpp
main/src/wifi/: wifi.cpp
